<resources>
    <string name="app_name">NUSAnswers</string>
    <string name="password">"You'll need a password"</string>
    <string name="password_single">Password</string>
    <string name="Email">"Email Address"</string>
    <string name="log_in">"Log in"</string>
    <string name="add">Add</string>
    <string name="SearchForMod">"Search For a Module"</string>
    <string name="Travis_and_zegang">"Travis Ching || Zhou Zegang"</string>
    <string name="do_not_have_an_account">"Don't have an account ?"</string>
    <string name="developed_by">"Developed by"</string>
    <string name="create_account">"Create your account"</string>
    <string name="name">Name</string>
    <string name="next">Next</string>
    <string name="save">Save</string>
    <string name="verified">Verified</string>
    <string name="email_verified">Email verified</string>
    <string name="email_not_verified">Email not verified (Tap to verify)</string>
    <string name="Tap_on_camera">"Tap on camera to choose profile picture"</string>
    <string name="NUSAnswers_is_an...">"NUSAnswers is an online community for NUS students to ask questions about past-year papers, answer others and learn together."</string>
    <string name="developed_by_twonames">"Developed by Travis Ching || Zhou Zegang"</string>
    <string name="sign_up">"Sign Up"</string>
    <string name="skip_for_now">"Skip for now"</string>
    <string name="completed_modules">"Completed modules"</string>
    <string name="ask_answer_learn">"Ask,Answer,Learn."</string>
    <string name="current_enrolled_modules">"Current enrolled modules"</string>
    <string name="which_programme_are_you_enrolled_in">"Which programme are you enrolled in ?"</string>
    <string name="sign_up_requirement">"By signing up, you agree to the Terms of Service and Private Policy, including Cookie use."</string>
    <string name="password_requirement">"Password needs to be at least 6 digit long"</string>
    <string name="done">"Done"</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="AY">
        <item>2000|01</item>
        <item>2001|02</item>
        <item>2002|03</item>
        <item>2004|05</item>
        <item>2005|06</item>
        <item>2006|07</item>
        <item>2007|08</item>
        <item>2008|09</item>
        <item>2009|10</item>
        <item>2010|11</item>
        <item>2011|12</item>
        <item>2012|13</item>
        <item>2013|14</item>
        <item>2014|15</item>
        <item>2015|16</item>
        <item>2016|17</item>
        <item>2017|18</item>
        <item>2018|19</item>
        <item>2019|20</item>
    </string-array>
    <string-array name="Sem">
        <item>Sem 1</item>
        <item>Sem 2</item>
    </string-array>
    <string-array name="Type">
        <item>Mid-term</item>
        <item>Final</item>
    </string-array>
    <string-array name="Programmes">
        <item>Applied Mathematics</item>
        <item>Applied Mathematics with specialisation in Mathematical Modelling and Data Analytics</item>
        <item>Applied Mathematics with specialisation in Operations Research and Financial Mathematics</item>
        <item>Architecture</item>
        <item>Biomedical Engineering</item>
        <item>Business Administration</item>
        <item>Business Administration (Accountancy)</item>
        <item>Business Analytics</item>
        <item>Chemical Engineering</item>
        <item>Chemistry</item>
        <item>Chemistry (with specialisation in Environment and Energy)</item>
        <item>Chemistry (with specialisation in Materials Chemistry)</item>
        <item>Chemistry (with specialisation in Medicinal Chemistry)</item>
        <item>Chinese Language</item>
        <item>Chinese Studies</item>
        <item>Civil Engineering</item>
        <item>Communications and New Media</item>
        <item>Computational Biology</item>
        <item>Computer Engineering</item>
        <item>Computer Science</item>
        <item>Data Science and Analytics</item>
        <item>Dentistry</item>
        <item>Economics</item>
        <item>Electrical Engineering</item>
        <item>Engineering</item>
        <item>Engineering Science</item>
        <item>English Language</item>
        <item>English Literature</item>
        <item>Environmental Engineering</item>
        <item>Environmental Studies in Biology</item>
        <item>Environmental Studies in Geography</item>
        <item>European Studies</item>
        <item>Food Science and Technology</item>
        <item>Geography</item>
        <item>Global Studies</item>
        <item>Graduate LL.B. Programme</item>
        <item>History</item>
        <item>Industrial and Systems Engineering</item>
        <item>Industrial Design</item>
        <item>Information Security</item>
        <item>Information Systems</item>
        <item>Japanese Studies</item>
        <item>Life Sciences</item>
        <item>Life Sciences (with specialisation in Biomedical Science)</item>
        <item>Life Sciences (with specialisation in Environmental Biology)</item>
        <item>Life Sciences (with specialisation in Molecular and Cell Biology)</item>
        <item>Malay Studies</item>
        <item>Material Science and Engineering</item>
        <item>Mathematics</item>
        <item>Mechanical Engineering</item>
        <item>Medicine</item>
        <item>Music</item>
        <item>Nursing</item>
        <item>Pharmaceutical Science</item>
        <item>Pharmacy</item>
        <item>Philosophy</item>
        <item>Physics</item>
        <item>Physics (with specialisation in Astrophysics)</item>
        <item>Physics (with specialisation in Nanophysics)</item>
        <item>Political Science</item>
        <item>Project and Facilities Management</item>
        <item>Psychology</item>
        <item>Quantitative Finance</item>
        <item>Real Estate</item>
        <item>Social Work</item>
        <item>Sociology</item>
        <item>South Asian Studies</item>
        <item>Southeast Asian Studies</item>
        <item>Statistics</item>
        <item>Statistics (with specialisation in Data Science)</item>
        <item>Statistics (with specialisation in Finance and Business Statistics)</item>
        <item>Theatre Studies</item>
        <item>Undergraduate Law Programme</item>

    </string-array>
    <string name="home_title">Home</string>
    <string name="contributions_title">Contributions</string>
    <string name="pastmodules_title">Past Modules</string>
    <string name="search_title">Search</string>
    <string name="title_activity_user_home">UserHome</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_bookmarks">Bookmarks</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about">About</string>
    <string name="nav_logout">Log out</string>
    <string name="not_enrolled">Opps! o.o\nIt looks like you have not enrolled in any modules yet!</string>
    <string name="no_past">Opps! o.o\nIt looks like you did not want us to find out your past hahaha.</string>
    <string name="no_contribution">Opps! o.o\nIt looks like nobody contributed to this module yet!</string>
    <string name="title_activity_user_profile">UserProfile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="title_activity_bookmarks">Bookmarks</string>
    <string name="bookmarks_title">Bookmarks</string>
    <string name="feature_not_implemented">Sorry :(\nWe are still working on this feature at the moment!</string>
    <string name="title_activity_module_home">ModuleHome</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="midterm_tab">Mid-Term</string>
    <string name="finals_tab">Finals</string>
    <string name="cheatsheet_tab">Cheatsheet</string>
    <string name="title_activity_question">QuestionActivity</string>
</resources>