<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/profile_icon"
            android:title="@string/nav_profile" />
        <item
            android:id="@+id/nav_bookmarks"
            android:icon="@drawable/bookmark_icon"
            android:title="@string/nav_bookmarks" />
        <!--
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings_icon"
            android:title="@string/nav_settings" /> -->
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/about_icon"
            android:title="@string/nav_about" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_power_settings_new_black_24dp"
            android:title="@string/nav_logout" />
    </group>
<!--
    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>
-->
</menu>
