<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bench"
    android:theme="@style/Theme.AppCompat.NoActionBar"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="230dp"
        android:layout_height="195dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="242dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:text=""
        android:typeface="serif"
        android:textColor="#000000"
        android:textSize="14sp"
        tools:text="The hero we need but don't deserve" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="47dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="239dp"
        android:background="#4F4F4F"
        android:ems="10"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:textColorHint="#FFFFFF" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="47dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="208dp"
        android:background="#4F4F4F"
        android:ems="10"
        android:hint="@string/password_single"
        android:inputType="textPassword"
        android:textColorHint="#FFFFFF" />

    <Button
        android:id="@+id/button3"
        android:layout_width="224dp"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="132dp"
        android:background="#F96C1C"
        android:text="@string/log_in"
        android:textColor="#FFFFFF" />


    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="103dp"
        android:layout_marginStart="20dp"
        android:ems="10"
        android:clickable="true"
        android:inputType="textPersonName"
        android:text="@string/do_not_have_an_account"
        android:textColor="#000000"
        android:textSize="14sp"
        android:typeface="serif"
        />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="97dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:text="@string/developed_by"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-32dp"
        android:text="@string/Travis_and_zegang"
        android:textColor="#000000" />

</RelativeLayout>