<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:theme="@style/Theme.AppCompat.NoActionBar"
    tools:context=".Signup2Activity">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="324dp"
        android:layout_height="5dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="182dp"
        android:background="#F2994A"
        android:text="TextView" />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="230dp"
        android:layout_height="195dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="172dp"
        android:text="@string/create_account"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="#000000"
        android:textSize="32sp"
        android:textStyle="bold"
        tools:typeface="serif" />

    <EditText
        android:id="@+id/editText5"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="324dp"
        android:layout_height="39dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="241dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/name"
        android:typeface="serif" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="324dp"
        android:layout_height="5dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="269dp"
        android:background="#F2994A"
        android:text="TextView" />

    <EditText
        android:id="@+id/editText6"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="324dp"
        android:layout_height="43dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="203dp"
        android:ems="10"
        android:inputType="textPassword"
        android:text="@string/password"
        android:typeface="serif" />

    <Button
        android:id="@+id/button11"
        style="@android:style/Widget.Button"
        android:layout_width="316dp"
        android:layout_height="32dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="57dp"
        android:background="#F2A968"
        android:text="@string/sign_up" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="328dp"
        android:layout_height="57dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="100dp"
        android:text="@string/sign_up_requirement"
        android:textColor="#000000"
        android:typeface="serif" />

</RelativeLayout>