<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserInformation2">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/SearchForCompleted"
        android:layout_alignStart="@+id/SearchForCompleted"
        android:layout_marginBottom="-41dp"
        android:text="@string/completed_modules"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="#000000"
        android:textSize="15sp"
        android:textStyle="bold"
        tools:typeface="serif" />

    <EditText
        android:id="@+id/SearchForCompleted"
        android:layout_width="349dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="54dp"
        android:ems="10"
        android:hint="@string/SearchForMod"
        android:inputType="textPersonName"
        android:textSize="12sp"
        tools:ignore="LabelFor" />

    <ListView
        android:id="@+id/listViewForCompleted"
        android:layout_width="349dp"
        android:layout_height="380dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="107dp" />

    <Button
        android:id="@+id/buttonToSaveCompleted"
        style="@android:style/Widget.Button"
        android:layout_width="77dp"
        android:layout_height="34dp"
        android:layout_alignEnd="@+id/SearchForCompleted"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="25dp"
        android:background="#F2A968"
        android:text="@string/next" />

</RelativeLayout>