<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ModuleHome">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/appbar_padding_top"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_weight="1"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:theme="@style/AppTheme"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <ImageView
                android:id="@+id/home_button"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/home_icon" />

            <TextView
                android:id="@+id/module_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:layout_weight="1"
                android:text="@string/app_name"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

        </android.support.v7.widget.Toolbar>

        <android.support.design.widget.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:tabTextColor="@android:color/black"
            app:tabSelectedTextColor="@color/colorPrimaryDark">

            <android.support.design.widget.TabItem
                android:id="@+id/tabMidTerms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/midterm_tab"
                android:textAlignment="center" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabFinals"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/finals_tab"
                android:textAlignment="center" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabCheatsheet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cheatsheet_tab"
                android:textAlignment="center" />


        </android.support.design.widget.TabLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

</android.support.design.widget.CoordinatorLayout>