<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:theme="@style/Theme.AppCompat.NoActionBar"
    tools:context=".SignupActivity">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="324dp"
        android:layout_height="5dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="174dp"
        android:background="#F2994A"
        android:text="" />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="230dp"
        android:layout_height="195dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:text="@string/create_account"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="#000000"
        android:textSize="32sp"
        android:textStyle="bold"
        tools:typeface="serif" />

    <EditText
        android:id="@+id/editEmailforSignup"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="324dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/name"
        android:textColorHint="#000000"
        android:textColor="#000000"
        android:typeface="serif" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="324dp"
        android:layout_height="5dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="254dp"
        android:background="#F2994A"
        android:text="TextView" />

    <EditText
        android:id="@+id/editPasswordforSignup"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="327dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="188dp"
        android:ems="10"
        android:hint="@string/password_single"
        android:inputType="textPassword"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:typeface="serif" />

    <Button
        android:id="@+id/buttonForSignUp"
        style="@android:style/Widget.Button"
        android:layout_width="75dp"
        android:layout_height="32dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="22dp"
        android:layout_marginEnd="18dp"
        android:background="#F2A968"
        android:text="@string/sign_up" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="68dp"
        android:background="#8D8D8D"
        android:text="TextView" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone"
        android:layout_height="wrap_content" />

</RelativeLayout>